--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
 body{
     margin: 0;
+    padding: 0;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
 }
